# pro-c-analyzer

./: .cursorrules  .gitignore  .markdownlint.json  CLAUDE.md  CODING_STANDARDS.md  README.md  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  markdownlint.yml  quality.yml
examples/: sample.pc
proc_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  cognitive.py  comments.py  cursors.py  cyclomatic.py  halstead.py  memory.py  parser.py  preprocessor.py  protocols.py  utils.py
proc_analyzer/formatters/: __init__.py  base.py  html_formatter.py  json_formatter.py  markdown_formatter.py
proc_analyzer/formatters/templates/html/: __init__.py  base.html  cursor_issues.html  file_section.html  files.html  memory_issues.html  summary.html  todos.html
proc_analyzer/formatters/templates/html/static/: script.js  styles.css
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_cognitive.py  test_comments.py  test_cursors.py  test_cyclomatic.py  test_formatters.py  test_halstead.py  test_memory.py  test_parser.py  test_preprocessor.py
