[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proc-analyzer"
version = "0.2.0"
description = "Analyseur statique pour code Pro*C (Oracle embedded SQL)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Bastien", email = "contact@example.com"}
]
keywords = ["pro*c", "oracle", "static-analysis", "complexity", "cyclomatic", "cognitive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
proc-analyzer = "proc_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/example/proc-analyzer"
Issues = "https://github.com/example/proc-analyzer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["proc_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
