[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proc-analyzer"
version = "0.2.0"
description = "Analyseur statique pour code Pro*C (Oracle embedded SQL)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Bastien", email = "contact@example.com"}
]
keywords = ["pro*c", "oracle", "static-analysis", "complexity", "cyclomatic", "cognitive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mutmut>=2.4.0",
]

[project.scripts]
proc-analyzer = "proc_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/example/proc-analyzer"
Issues = "https://github.com/example/proc-analyzer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["proc_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (géré par black)
]

[tool.ruff.lint.isort]
known-first-party = ["proc_analyzer"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Progressif
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.mutmut]
paths_to_mutate = ["proc_analyzer"]
backup = false
exclude = [
    "*/__pycache__/*",
    "*/__init__.py",
    "*/formatters/templates/*",
]
